Fixed footer's color contrasts

--- a/src/sass/objects/_footer.scss
+++ b/src/sass/objects/_footer.scss
@@ -1,7 +1,8 @@
 footer {
-    background-color: #1f1f1f;
+    background-color: $darkGrey;
     width: 100%;
     padding-top: 2em;
+    padding-bottom: 2em;
 }
 
 footer::after {
@@ -20,7 +21,7 @@ footer div.footerWrap {
     display: inline-block;
     box-sizing: border-box;
     width: 33%;
-    color: #616161;
+    color: $grey;
     font: 0.8em Helvetica, "Arial", sans-serif;
     padding-left: 5%;
 }
